rest/rest-deployment.yaml
apiVersion: apps/v1  # Use apps/v1beta2 for k8s versions before 1.9.0 and extensions/v1beta1 for versions before 1.8.0
kind: Deployment
metadata:
  name: rest-service
spec:
  selector:
    matchLabels:
      app: rest-service
  replicas: 1
  template:
    metadata:
      labels:
        app: rest-service
    spec:
      containers:
      - name: rest-container        
        image: vankudremanish/music-separation-service:latest
        resources:
          requests:
            cpu: 100m
            memory: 400Mi
        ports:
        - containerPort: 5000
